--- a/css/wiki.css
+++ b/css/wiki.css
@@ -26,6 +26,9 @@
 	padding: 10px;
 	background-color: #EEEEEE;
 	margin: 0;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444444;
 }
 .expand:hover {
 	background: #EEEEFF;
